--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -1,33 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.njzjz.chemicaltools.TitleActivity">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/openElementButton"
-        android:src="@drawable/element"
-        android:onClick="openElement"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:longClickable="false" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+<android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.njzjz.chemicaltools.TitleActivity">
+
+        <ImageButton
+        android:layout_width="match_parent"
+            android:layout_height="wrap_content"
         android:id="@+id/openMassButton"
         android:src="@drawable/mass"
         android:onClick="openMass"
         android:longClickable="false"
-        android:layout_below="@+id/openElementButton"
-        android:layout_alignLeft="@+id/openElementButton"
-        android:layout_alignStart="@+id/openElementButton" />
+            android:maxWidth="500dp"
+            android:layout_below="@+id/openElementButton"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
-</RelativeLayout>
+        <ImageButton
+            android:layout_height="wrap_content"
+            android:id="@+id/openElementButton"
+            android:src="@drawable/element"
+            android:onClick="openElement"
+            android:longClickable="false"
+            android:layout_width="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
+
+    <!-- The navigation drawer -->
+        <ListView
+            android:id="@+id/navdrawer"
+            android:layout_width="260dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@android:color/white"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:drawSelectorOnTop="false">
+        </ListView>
+
+</android.support.v4.widget.DrawerLayout>
+
+
