--- a/app/src/main/res/layout/activity_mass.xml
+++ b/app/src/main/res/layout/activity_mass.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/massText"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionSend"
         android:inputType="text"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.06"
