--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/examText"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionSend"
         android:inputType="text"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.06"
