--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/elementText"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionSend"
             android:inputType="text"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.06"
