fix several bugs

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -481,72 +481,72 @@
         <item>Oganesson</item>
     </string-array>
     <string-array name="elementOriginArray">
-        <item>composed of the Greek elements hydro-and -gen meaning water-forming</item>
-        <item>the Greek helios, sun</item>
-        <item>the Greek lithos, stone</item>
-        <item>beryl, a mineral</item>
-        <item>borax, a mineral</item>
-        <item>the Latin carbo, coal</item>
-        <item>the Greek nitron and -gen meaning niter-forming</item>
-        <item>from the Greek oxy-, both sharp and acid, and -gen, meaning acid-forming</item>
-        <item>the Latin fluere, to flow</item>
-        <item>the Greek neos, meaning new</item>
-        <item>the English word soda (natrium in Latin)[3]</item>
+        <item>Composed of the Greek elements hydro-and -gen meaning water-forming</item>
+        <item>The Greek helios, sun</item>
+        <item>The Greek lithos, stone</item>
+        <item>Beryl, a mineral</item>
+        <item>Borax, a mineral</item>
+        <item>The Latin carbo, coal</item>
+        <item>The Greek nitron and -gen meaning niter-forming</item>
+        <item>From the Greek oxy-, both sharp and acid, and -gen, meaning acid-forming</item>
+        <item>The Latin fluere, to flow</item>
+        <item>The Greek neos, meaning new</item>
+        <item>The English word soda (natrium in Latin)[3]</item>
         <item>Magnesia, a district of Eastern Thessalyin Greece</item>
-        <item>from alumina, a compound (originally aluminum)</item>
-        <item>from the Latin silex, flint (originally silicium)</item>
-        <item>the Greek phoosphoros, carrying light</item>
-        <item>the Latin sulphur, fire and brimstone[5]</item>
-        <item>the Greek chloros, greenish yellow</item>
-        <item>the Greek argos, idle</item>
+        <item>From alumina, a compound (originally aluminum)</item>
+        <item>From the Latin silex, flint (originally silicium)</item>
+        <item>The Greek phoosphoros, carrying light</item>
+        <item>The Latin sulphur, fire and brimstone[5]</item>
+        <item>The Greek chloros, greenish yellow</item>
+        <item>The Greek argos, idle</item>
         <item>New Latin potassa, potash (kalium in Latin)[3]</item>
-        <item>the Latin calx, lime</item>
+        <item>The Latin calx, lime</item>
         <item>Scandia, the Latin name for Scandinavia</item>
         <item>Titans, the sons of the Earth goddess of Greek mythology</item>
         <item>Vanadis, an Old Norse name for the Scandinavian goddess Freyja</item>
-        <item>the Greek chroma, color</item>
-        <item>corrupted from magnesia negra, see Magnesium</item>
+        <item>The Greek chroma, color</item>
+        <item>Corrupted from magnesia negra, see Magnesium</item>
         <item>English word (ferrum in Latin)</item>
-        <item>the German word Kobold, goblin</item>
-        <item>from Swedish kopparnickel, containing the German word Nickel, goblin</item>
+        <item>The German word Kobold, goblin</item>
+        <item>From Swedish kopparnickel, containing the German word Nickel, goblin</item>
         <item>English word (Latin cuprum)</item>
-        <item>the German Zink</item>
+        <item>The German Zink</item>
         <item>Gallia, the Latin name for France</item>
         <item>Germania, the Latin name for Germany</item>
         <item>English word (Latin arsenicum)</item>
-        <item>the Greek selene, moon</item>
-        <item>the Greek bromos, stench</item>
-        <item>the Greek kryptos, hidden</item>
-        <item>the Latin rubidus, deep red</item>
+        <item>The Greek selene, moon</item>
+        <item>The Greek bromos, stench</item>
+        <item>The Greek kryptos, hidden</item>
+        <item>The Latin rubidus, deep red</item>
         <item>Strontian, a small town in Scotland</item>
         <item>Ytterby, Sweden</item>
         <item>Persian Zargun, gold-colored; German Zirkoon, jargoon</item>
         <item>Niobe, daughter of king Tantalus from Greek mythology</item>
-        <item>the Greek molybdos meaning lead</item>
-        <item>the Greek tekhnètos meaning artificial</item>
+        <item>The Greek molybdos meaning lead</item>
+        <item>The Greek tekhnètos meaning artificial</item>
         <item>Ruthenia, the New Latin name for Russia</item>
-        <item>the Greek rhodos, meaning rose coloured</item>
-        <item>the then recently discovered asteroid Pallas, considered a planet at the time</item>
+        <item>The Greek rhodos, meaning rose coloured</item>
+        <item>The then recently discovered asteroid Pallas, considered a planet at the time</item>
         <item>English word (argentum in Latin)[3]</item>
-        <item>the New Latin cadmia, from King Kadmos</item>
-        <item>indigo</item>
+        <item>The New Latin cadmia, from King Kadmos</item>
+        <item>Indigo</item>
         <item>English word (stannum in Latin)</item>
-        <item>composed from the Greek anti, against, and monos, alone (stibium in Latin)</item>
+        <item>Composed from the Greek anti, against, and monos, alone (stibium in Latin)</item>
         <item>Latin tellus, earth</item>
         <item>French iode (after the Greek ioeides, violet)</item>
-        <item>the Greek xenos, strange</item>
-        <item>the Latin caesius, sky blue</item>
-        <item>the Greek barys, heavy</item>
-        <item>the Greek lanthanein, to lie hidden</item>
-        <item>the then recently discovered asteroid Ceres, considered a planet at the time</item>
-        <item>the Greek praseios didymos meaning green twin</item>
-        <item>the Greek neos didymos meaning new twin</item>
+        <item>The Greek xenos, strange</item>
+        <item>The Latin caesius, sky blue</item>
+        <item>The Greek barys, heavy</item>
+        <item>The Greek lanthanein, to lie hidden</item>
+        <item>The then recently discovered asteroid Ceres, considered a planet at the time</item>
+        <item>The Greek praseios didymos meaning green twin</item>
+        <item>The Greek neos didymos meaning new twin</item>
         <item>Prometheus of Greek mythology who stole fire from the Gods and gave it to humans</item>
         <item>Samarskite, the name of the mineral from which it was first isolated</item>
         <item>Europe</item>
         <item>Johan Gadolin, chemist, physicist and mineralogist</item>
         <item>Ytterby, Sweden</item>
-        <item>the Greek dysprositos, hard to get</item>
+        <item>The Greek dysprositos, hard to get</item>
         <item>Holmia, the New Latin name for Stockholm</item>
         <item>Ytterby, Sweden</item>
         <item>Thule, the ancient name for Scandinavia</item>
@@ -554,24 +554,24 @@
         <item>Lutetia, the Latin name for Paris</item>
         <item>Hafnia, the New Latin name for Copenhagen</item>
         <item>King Tantalus, father of Niobe from Greek mythology</item>
-        <item>the Swedish tung sten, heavy stone (W is wolfram, the old name of the tungsten mineral wolframite)[3]</item>
+        <item>The Swedish tung sten, heavy stone (W is wolfram, the old name of the tungsten mineral wolframite)[3]</item>
         <item>Rhenus, the Latin name for the river Rhine</item>
-        <item>the Greek osmè, meaning smell</item>
+        <item>The Greek osmè, meaning smell</item>
         <item>Iris, the Greek goddess of the rainbow</item>
-        <item>the Spanish platina, meaning little silver</item>
+        <item>The Spanish platina, meaning little silver</item>
         <item>English word (aurum in Latin)</item>
-        <item>the New Latin name mercurius, named after the Roman god (Hg from former name hydrargyrum, from Greek hydr-, water, and argyros, silver)</item>
-        <item>the Greek thallos, green twig</item>
+        <item>The New Latin name mercurius, named after the Roman god (Hg from former name hydrargyrum, from Greek hydr-, water, and argyros, silver)</item>
+        <item>The Greek thallos, green twig</item>
         <item>English word (plumbum in Latin)[3]</item>
         <item>German word, now obsolete</item>
         <item>Polonia, the New Latin name for Poland</item>
-        <item>the Greek astatos, unstable</item>
+        <item>The Greek astatos, unstable</item>
         <item>From radium, as it was first detected as an emission from radium during radioactive decay</item>
         <item>Francia, the New Latin name for France</item>
-        <item>the Latin radius, ray</item>
-        <item>the Greek aktis, ray</item>
+        <item>The Latin radius, ray</item>
+        <item>The Greek aktis, ray</item>
         <item>Thor, the Scandinavian god of thunder</item>
-        <item>the Greek protos, first, and actinium, which is produced through the radioactive decay of protactinium</item>
+        <item>The Greek protos, first, and actinium, which is produced through the radioactive decay of protactinium</item>
         <item>Uranus, the seventh planet in the Solar System</item>
         <item>Neptune, the eighth planet in the Solar System</item>
         <item>Pluto, a dwarf planet in the Solar System (considered the ninth planet at the time)</item>
