--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.actionbartest.MainActivity" >
 
     <item
         android:id="@+id/action_share"
-        android:icon="@drawable/home"
-        android:title="@string/button_Share"/>
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/button_Share"
+        app:showAsAction="always" />
 </menu>
