Settings and History

--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -53,9 +53,17 @@
         android:id="@+id/examTextviewTop"
         android:layout_weight="0.06"
         android:text="H"
-        android:textSize="80dp"
+        android:textSize="50dp"
         android:textColor="@color/abc_primary_text_material_light"
         android:scrollbars="vertical"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/examScoreTextview"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
