--- a/app/src/main/res/values/settings_pref.xml
+++ b/app/src/main/res/values/settings_pref.xml
@@ -14,6 +14,34 @@
         <item>86</item>
         <item>118</item>
     </string-array>
+    <string-array name="settings_entries_examType">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+    <string-array name="settings_entry_values_examType">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
     <!--
     <string-array name="settings_entries_post_limit">
         <item>10</item>
